[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
conf = {git = "https://github.com/UnChosenUndead/conf"}
sqlx = { version = "0.8.6", features = ["runtime-tokio", "derive", "postgres"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"